# simplestatistics changelog

## 0.1.x

TBD

### Added

- `linear_regression_line()` returns a function that, provided with a (m, b)
tuple, where m is the slope and b is the y intercept, calculates y values
based on given x values.
- `root_mean_square()`
- `interquartile_range()`

## 0.1.5

2016-07-30

### Added

- `factorial()`
- `choose()`
- `binomial()` to calculate binomial distribution probabilities
- `normal()` to calculate normal distribution probabilities
- `kurtosis()` to calculate kurtosis/"tailedness" of a probability distribution of a variable
_ `skew()` to calculate Pearson's moment coefficient of skewness
- `linear_regression()` to calculate slope (m) and y intercept (b) of line of
best fit.


### Improved

- Reorganized documentation.

### Improved

- 100% test coverage

## 0.1.3

2016-06-06

### Added

Functions for calculating correlation coefficients, products of vectors,
quantiles, and sums.

- `correlate()`
- `product()`
- `quantiles()`
- `sum()`